--- a/src/app/pages/processos/cadastro-processo/cadastro-processo.component.html
+++ b/src/app/pages/processos/cadastro-processo/cadastro-processo.component.html
@@ -165,7 +165,7 @@
         <div class="col-12 md:col-6 lg:col-6">
           <h6><span class="obrigatorio">*</span>Descrição</h6>
           <textarea name="informacoes" [(ngModel)]="itensprocesso.informacoes" rows="25" cols="80" pInputTextarea
-            upperCase #informacoes="ngModel" [autoResize]="true"></textarea>
+             #informacoes="ngModel" [autoResize]="true"></textarea>
           <app-message [control]="informacoes" error="required" text="Detalhe as informações"></app-message>
         </div>
      
