--- a/src/app/pages/status/cadastro-status/cadastro-status.component.html
+++ b/src/app/pages/status/cadastro-status/cadastro-status.component.html
@@ -22,6 +22,17 @@
             }} caracteres"></app-message>
         </div>
       </div>
+      <div class="grid flex justify-content-center flex-wrap gap-3 col-12 mt-3">
+        <div class="flex align-items-center">
+          <p-radioButton name="AGENDAMENTO" value="AGENDAMENTO" [(ngModel)]="newstatus.tipo" inputId="tipo1"></p-radioButton>
+          <label for="tipo1" class="ml-2">Agendamento</label>
+        </div>
+
+        <div class="flex align-items-center">
+          <p-radioButton name="PROCESSO" value="PROCESSO" [(ngModel)]="newstatus.tipo" inputId="tipo2"></p-radioButton>
+          <label for="tipo2" class="ml-2">Processo</label>
+        </div>
+      </div>
       <div class="flex justify-content-center">
         <div class="flex align-items-center justify-content-center">
           <h6>Status</h6>
@@ -38,7 +49,7 @@
       <div class="flex flex-wrap justify-content-center">
         <div class="col-12 md:col-6 lg:col-4">
           <button pButton pRipple type="submit" label="Salvar" icon="fas fa-save"
-            [disabled]="formStatus.invalid || salvando" class="p-button-raised p-button-warning w-full"></button>
+            [disabled]="formStatus.invalid || salvando || newstatus.tipo.length === 0" class="p-button-raised p-button-warning w-full"></button>
         </div>
         <!-- <div class="col-12 md:col-6 lg:col-4">
           <button pButton pRipple type="button" class="p-button-outlined p-button-primary w-full" icon="fas fa-trash"
