--- a/src/app/pages/clientes/lista-clientes/lista-clientes.component.html
+++ b/src/app/pages/clientes/lista-clientes/lista-clientes.component.html
@@ -43,6 +43,45 @@
                   #qtyInput (keyup)="search(cols)" (blur)="applySearch(cols)" pTooltip="Pesquisa nessa coluna"
                   tooltipPosition="top">
               </div>
+              <div *ngIf="cols.type === 'date' && cols.field === 'datanasc'" class="flex p-2"
+              [ngStyle]="{'min-width': cols.width}">
+              <p-overlayPanel #dataNasc>
+                <ng-template pTemplate>
+                  <div class="grid flex justify-content-center align-items-center">
+                    <div class="col-1">
+                      <span class="spanDeAte">De</span>
+                    </div>
+                    <div class="col-5">
+                      <input pInputText matInput mask="d0/M0/0000" placeholder="00/00/0000" name="dtnascde"
+                        (keyup)="searchData('datanascde')" (blur)="searchData('datanascde')" type="tel"
+                        class="w-full" [dropSpecialCharacters]="false" [(ngModel)]="datanascde"
+                        #dtnascde="ngModel" minlength="10" />
+                      <app-message [control]="dtnascde" error="minlength" text="Digite uma data completa">
+                      </app-message>
+                    </div>
+                    <div class="col-1"> 
+                      <span class="spanDeAte">Até</span>
+                    </div> 
+                    <div class="col-5">
+                      <input pInputText matInput mask="d0/M0/0000" placeholder="00/00/0000" name="dtnascate"
+                        (keyup)="searchData('datanascate')" (blur)="searchData('datanascate')" type="tel"
+                        class="w-full" [(ngModel)]="datanascate" [dropSpecialCharacters]="false"
+                        #dtnascate="ngModel" minlength="10" />
+                      <app-message [control]="dtnascate" error="minlength" text="Digite uma data completa">
+                      </app-message>
+                    </div>
+                  </div>
+                  <div class="grid flex justify-content-end align-items-center mt-2 mr-1">
+                    <button pButton pRipple type="button" label="Limpar Filtro" class="p-button-raised p-button-warning"
+                      icon="fa-solid fa-filter" (click)="limparData('dataNasc')"></button>
+                  </div>
+                  
+                </ng-template>
+              </p-overlayPanel>
+              <button pButton pRipple type="button" label="Pesquisar"
+                [ngClass]="(datanascde || datanascate) ? 'p-button-warning' : 'p-button-raised p-button-secondary p-button-outlined'"
+                class="p-button-raised  w-full" (click)="dataNasc.toggle($event)"></button>
+            </div>
               <div *ngIf="cols.type === 'date' && cols.field === 'datacriacao'" class="flex p-2"
                 [ngStyle]="{'min-width': cols.width}">
                 <p-overlayPanel #dataCriacao>
