--- a/src/app/pages/usuarios/usuarios-lista/usuarios-lista.component.html
+++ b/src/app/pages/usuarios/usuarios-lista/usuarios-lista.component.html
@@ -26,14 +26,14 @@
   
       <ng-template pTemplate="header" let-columns>
         <tr>
-          <th class="tdAcoes">&nbsp;</th>
+          <th class="btnAcoes">&nbsp;</th>
           <th *ngFor="let cols of columns" [ngStyle]="{'min-width': cols.width}" pReorderableColumn>
             {{cols.header}}
           </th>
         </tr>
   
         <tr>
-          <th class="tdAcoes">&nbsp;</th>
+          <th class="btnAcoes">&nbsp;</th>
           <th *ngFor="let cols of columns; let i = index" [ngStyle]="{'min-width': cols.width}">
             <form #formFiltro="ngForm" autocomplete="off">
               <div *ngIf="cols.type !== 'date' && cols.type !== 'status'" class="flex p-2"
@@ -128,10 +128,14 @@
   
       <ng-template pTemplate="body" let-usuario let-columns="columns" let-rowData>
         <tr class="ui-selectable-row" [pSelectableRow]="usuario">
-          <td class="tdEditar">
+          <td class="btnAcoes">
             <button pButton pRipple type="button" class="p-button-text p-button-warning"
               pTooltip="Editar" icon="pi pi-pencil" tooltipPosition="top" [routerLink]="['/usuarios', usuario._id]"
               ></button>
+
+              <button pButton pRipple type="button" class="p-button-text p-button-warning ml-1"
+              pTooltip="Alterar Senha" tooltipPosition="top" icon="pi pi-lock"
+              [routerLink]="['/usuarios', usuario._id, 'senha']"></button>
           </td>
           <td class="responsivetable" *ngFor="let cols of columns" [ngStyle]="{'min-width': cols.width}"
             pReorderableColumn
